fix ctrl about change password + YAML
